--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -1394,7 +1394,8 @@ span.status-published-title.color-red{
 	margin-bottom: 7px;
 	display: block;
 }
-.ncc-input-fields-row input[type="text"]{
+.ncc-input-fields-row input[type="text"],
+.ncc-input-fields-row input[type="number"]{
 	width: 100%;
 	height: 50px;
 	background: #FFFFFF;
@@ -1417,22 +1418,26 @@ span.status-published-title.color-red{
 	line-height: 24px;
 }
 
-.ncc-input-title-fields-row input[type="text"]::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+.ncc-input-title-fields-row input[type="text"]::-webkit-input-placeholder,
+.ncc-input-title-fields-row input[type="number"]::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   opacity: 1;
   color: #818181;
   font-style: italic;
 }
-.ncc-input-title-fields-row input[type="text"]::-moz-placeholder { /* Firefox 19+ */
+.ncc-input-title-fields-row input[type="text"]::-moz-placeholder,
+.ncc-input-title-fields-row input[type="number"]::-moz-placeholder { /* Firefox 19+ */
   opacity: 1;
   color: #818181;
   font-style: italic;
 }
-.ncc-input-title-fields-row input[type="text"]:-ms-input-placeholder { /* IE 10+ */
+.ncc-input-title-fields-row input[type="text"]:-ms-input-placeholder,
+.ncc-input-title-fields-row input[type="number"]:-ms-input-placeholder { /* IE 10+ */
   opacity: 1;
   color: #818181;
   font-style: italic;
 }
-.ncc-input-title-fields-row input[type="text"]:-moz-placeholder { /* Firefox 18- */
+.ncc-input-title-fields-row input[type="text"]:-moz-placeholder,
+.ncc-input-title-fields-row input[type="number"]:-moz-placeholder { /* Firefox 18- */
   opacity: 1;
   color: #818181;
   font-style: italic;
