--- a/themes/socialasset/assets/css/_about-us.css
+++ b/themes/socialasset/assets/css/_about-us.css
@@ -163,7 +163,7 @@
   min-height: 125px;
   margin-bottom: 3px;
   border-radius: 100px;
-  background: #0000;
+  background: transparent;
   -webkit-transition: all .5s ease;
   -ms-transition: all .5s ease;
   transition: all .5s ease;
