--- a/themes/socialasset/assets/css/_footer.css
+++ b/themes/socialasset/assets/css/_footer.css
@@ -53,7 +53,7 @@
   border-radius: 30px;
   padding: 23px 70px 25px 33px;
   font-size: 15px;
-  background: #0000;
+  background: transparent;
   color: #fff;
 }
 .nl-from-wrp input:focus{
@@ -81,7 +81,7 @@
   bottom: 0;
   width: 70px;
   text-align: center;
-  background: #0000;
+  background: transparent;
   cursor: pointer;
   color: #fff;
 }
