--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -666,7 +666,7 @@ span.btm-q-icon {
 }
 .join-journey-section.hm-join-journey-sec .jjsg-des-top,
 .join-journey-section.hm-join-journey-sec .jjsg-des-bottom {
-    background: #0000;
+    background: transparent;
 }
 .hm-join-journey-sec .jjsg-des-top,
 .hm-join-journey-sec .jjsg-des-bottom{
@@ -766,7 +766,7 @@ span.btm-q-icon {
     border-radius: 100%;
     cursor: pointer;
     outline: none;
-    background: #0000;
+    background: transparent;
     -webkit-transition: all .3s ease;
     -o-transition: all .3s ease;
     transition: all .3s ease;
@@ -825,7 +825,7 @@ span.btm-q-icon {
     border-radius: 100%;
     cursor: pointer;
     outline: none;
-    background: #0000;
+    background: transparent;
     -webkit-transition: all .3s ease;
     -o-transition: all .3s ease;
     transition: all .3s ease;
