--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -336,9 +336,9 @@ span.hm-wc-social-assets-top-shape {
 }
 .hm-explore-campaigns-con{
 	min-height: 315px;
-	display: flex;
+/* 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: center; */
 	border-radius: 5px;
 	position: relative;
 	overflow: hidden;
@@ -372,8 +372,14 @@ span.hm-wc-social-assets-top-shape {
 	min-height: 105px;
 	text-align: center;
 	color: #fff;
-	position: relative;
+	position: absolute;
 	z-index: 3;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
 }
 .hm-explore-campaigns-des strong{
 	display: block;
