--- a/themes/socialasset/assets/css/_home-page.css
+++ b/themes/socialasset/assets/css/_home-page.css
@@ -102,7 +102,7 @@
 	padding-bottom: 25px;
 	color: #fff;
 	font-size: 29px;
-	line-height: 44px;
+	line-height: 32px;
 	font-weight: 700;
 	text-transform: capitalize;
 }
@@ -111,9 +111,10 @@
 	line-height: 24px;
 	color: #fff;
 	font-weight: 500;
-	padding-bottom: 18px;
+	margin-bottom: 28px;
 }
 .sa-main-slider-cam-des a.campaign{
+	display: inline-block;
 	padding: 18px 78px;
 	font-size: 12px;
 	color: #fff;
@@ -1057,6 +1058,9 @@
 	.show-lg{
 		display: block!important;
 	}
+	.banner-icon{
+		display: none;
+	}
 	.sa-welcome-grid-item-top-des-img {
 	    left: 10%;
 	}
@@ -1073,6 +1077,9 @@
 	.sa-campaigns-grid-section {
 	    padding-bottom: 80px;
 	}
+	.sa-blog-grd-item-img-ctlr{
+		border-radius: 8px;
+	}
 
 }
 
@@ -1082,6 +1089,12 @@
 	}
 	.show-md{
 		display: block!important;
+	}
+	.sa-main-slider-bg{
+		min-height: 600px !important;
+	}
+	.sa-main-slider-des-inner {
+	    padding-top: 250px;
 	}
 	.sa-main-slider-des-inner strong {
 	    font-size: 40px;
@@ -1157,6 +1170,7 @@
 	    width: 85%;
 	    margin: auto;
 	    margin-top: -105px;
+	    left: 0%;
 	}
 	
 	.sa-usr-rgt-des h3 {
@@ -1217,6 +1231,9 @@
 	.sa-blog-sec-hdr p {
 	    margin-bottom: 50px;
 	}
+	.sa-campaign-upcoming-section{
+		padding-bottom: 100px;
+	}
 }
 
 @media(max-width: 767px){
@@ -1226,11 +1243,9 @@
 	.show-sm{
 		display: block!important;
 	}
-	.sa-main-slider-bg{
-		min-height: 742px !important;
-	}
-	.sa-main-slider-des-inner {
-	    padding-top: 310px;
+	.sa-main-slider-des-inner strong span.bus:before,
+	.sa-main-slider-des-inner strong span.soc:after {
+	    display: none;
 	}
 	.sa-main-slider-wrap .slick-dots {
 	    width: 100%;
@@ -1271,10 +1286,14 @@
 		width: 100%;
 		margin: 0 auto;
 	}
+	.sa-welcome-grid-item-top-img, 
+	.sa-welcome-grid-item-bottom-img {
+	    min-height: 350px;
+	}
 	.sa-welcome-grid-item-top-des,
 	.sa-welcome-grid-item-bottom-des{
 		min-height: auto;
-		padding: 60px 15px 60px 15px;
+		padding: 70px 15px 60px 15px;
 	}
 	.sa-user-right {
 	    left: 1%;
@@ -1403,6 +1422,12 @@
 	.sa-blog-link a {
 	    padding: 18px 55px;
 	}
+	.sa-cam-grd-item-img {
+	    min-height: 260px;
+	}
+	.sa-blog-grd-item-img {
+	    min-height: 250px;
+	}
 }
 
 @media(max-width: 575px){
@@ -1411,12 +1436,6 @@
 	}
 	.show-xs{
 		display: block!important;
-	}
-	.sa-main-slider-bg{
-		min-height: 642px !important;
-	}
-	.sa-main-slider-des-inner {
-	    padding-top: 275px;
 	}
 	.sa-main-slider-des-inner strong {
 	    font-size: 30px;
@@ -1490,8 +1509,12 @@
 	.fw-50 {
 	    width: 100% !important;
 	}
+	.sa-campaigns-section-inner ul {
+	    margin-left: 0px;
+	    margin-right: 0px;
+	}
 	.sa-cam-grd-item-wrap{
-		max-width: 400px;
+		max-width: 300px;
 		width: 100%;
 		margin: 0 auto;
 		min-height: 260px;
@@ -1504,6 +1527,10 @@
 	    padding-left: 0px;
     	padding-right: 0px;
 	}
+	.sa-blog-grid ul {
+	    margin-left: 0px;
+	    margin-right: 0px;
+	}
 	.sa-blog-grd-item-img-wrap{
 		max-width: 400px;
 		width: 100%;
@@ -1511,6 +1538,12 @@
 	}
 	.sa-blog-grd-item-img-ctlr{
 		border-radius: 8px;
+	}
+	.sa-blog-grd-item-des {
+	    padding: 30px 61px 0 12px;
+	}
+	.sa-blog-grd-item-des p {
+	    padding-bottom: 45px;
 	}
 
 }
@@ -1570,6 +1603,9 @@
 	.sa-welcome-grid-item-bottom-des {
 	    padding: 145px 15px 80px 50px;
 	}
+	.sa-blog-grd-item-des {
+	    padding: 30px 30px 0 12px;
+	}
 
 }
 
@@ -1593,5 +1629,15 @@
 	}
 	.page-banner .slick-dots {
 	    top: 90%;
+	}
+	.sa-main-slider-cam-des p {
+	    font-size: 12px;
+	    line-height: 20px;
+	}
+	.sa-main-slider-cam-des a.campaign {
+	    font-size: 11px;
+	}
+	.sa-blog-grd-item-des {
+	    padding: 30px 15px 0 12px;
 	}
 }
