--- a/themes/socialasset/assets/css/_campaign-list.css
+++ b/themes/socialasset/assets/css/_campaign-list.css
@@ -541,12 +541,12 @@ min-height: 42px;
 }
 
 
-@media(min-width: 1921px){
+/*@media(min-width: 1921px){
 	.container-fluid{
 		margin-left: 15%;
 		margin-right: 15%;
 	}
-}
+}*/
 
 
 
