--- a/themes/socialasset/assets/css/_user-campaign-page.css
+++ b/themes/socialasset/assets/css/_user-campaign-page.css
@@ -1,3 +1,10 @@
+a.backto-panel {
+    background: #fff;
+    padding: 15px;
+    display: inline-block;
+    border-radius: 50px;
+    margin-bottom: 30px;
+}
 .wp-editor-container textarea.wp-editor-area {
     visibility: visible !important;
 }
