--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -671,6 +671,7 @@ span.file-up-instruction-txt {
 	width: auto;
 	height: auto;
 	border-radius: 0;
+	border-radius: 50%;
 }
 .profile-img-step-1,
 .profile-img-step-2{
@@ -692,6 +693,10 @@ span.file-up-instruction-txt {
 	border: 4px solid #fff;
 	background: #e9eaef;
 	position: relative;
+	transition: all 0.3s;
+}
+.profile-img-edit:hover{
+	background: #e1e2e9;
 }
 .ngo-profile-sec .profile-img-edit,
 .ngo-profile-sec .profile-img,
