--- a/themes/socialasset/assets/css/_campaign-list.css
+++ b/themes/socialasset/assets/css/_campaign-list.css
@@ -517,16 +517,17 @@ min-height: 42px;
     position: relative;
 }
 .campaign-action {
-    position: absolute;
-    bottom: -22px;
-    left: 0px;
-    display: none;
+    opacity: 0;
+    padding-top: 5px;
+    transition: all 0.3s;
 }
 .campaign-action a {
-    font-size: 16px;
+    font-size: 12px;
+    line-height: 1;
+    vertical-align: middle;
 }
 .edit-action:hover .campaign-action {
-    display: block;
+    opacity: 1;
 }
 @media(max-width: 991px){
 	.user-campaign-list-cntlr ul li{
