--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -645,8 +645,7 @@ a.linkedin-login-btn:hover{
 	margin-left: auto;
 	margin-right: auto;
 	box-shadow: 0 0 25px #e6e3e3;
-	border: 4px solid #fff;
-	background: #e9eaef;
+	background: #fff;
 }
 .profile-img.branding-logo{
 	display: flex;
@@ -664,6 +663,7 @@ span.file-up-instruction-txt {
     font-size: 9px!important;
     font-style: italic;
     color: #A7AAB4;
+    color: #000417;
     margin-bottom: 0;
     line-height: 12px!important;
 }
@@ -676,6 +676,7 @@ span.file-up-instruction-txt {
 .profile-img-step-1,
 .profile-img-step-2{
 	padding-bottom: 25px;
+	position: relative;
 }
 .username-filed{
 	min-height: 70px;
@@ -1482,7 +1483,7 @@ span.status-published-title.color-red{
 	background: #fff;
 	border-radius: 5px;
 	position: relative;
-	padding: 0 0 0 59px;
+	padding: 0 0 0 50px;
 
 }
 .ncc-input-fields-row-col > label{
@@ -1501,6 +1502,8 @@ span.status-published-title.color-red{
 	width: 100%;
 	font-size: 15px;
 	color: #5F5F5F;
+	background: #fff url(../images/calender.png) no-repeat!important;
+    background-position: right 15px top 15px!important;
 
 }
 .ncc-input-fields-row label{
@@ -1521,16 +1524,16 @@ span.status-published-title.color-red{
 	-ms-transform: translateY(-50%);
 	-webkit-transform: translateY(-50%);	
 }
-.ngo-upload-cover-photo-inr{
-	min-height: 50px;
-	background: #fff;
-	-webkit-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
+.ngo-upload-cover-photo-inr {
+    min-height: 50px;
+    background: #fff;
+    -webkit-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
     -moz-box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
     box-shadow: 0px 3px 15px 0px rgba(212,220,227,1);
     width: 100%;
     border-radius: 5px;
     position: relative;
-    padding:5px 20px;
+    padding: 40px 20px 10px;
 }
 .ngo-upload-cover-photo-inr input[type="file"]{
 	height: 100%;
@@ -1547,21 +1550,15 @@ span.status-published-title.color-red{
 }
 .ngo-upload-cover-photo-inr span{
 	position: absolute;
-	top: 50%;
-		transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);	
-	left: 23px;
+	top: 19px;	
+	left: 20px;
 	font-size: 13px;
 	line-height: 15px;
 	font-weight: 700;
 }
 .ngo-upload-cover-photo-inr i{
 	position: absolute;
-	top: 50%;
-		transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
+	top: 16px;
 	right: 20px;	
 }
 .ncc-campaign-gallery{
@@ -1588,6 +1585,13 @@ span.status-published-title.color-red{
     width: 100px;
     height: 100px;	
     position: relative;
+    transition: all 0.3s;
+}
+#campaign_gallery{
+	cursor: pointer;
+}
+.ncc-campaign-gallery-add-img:hover{
+	background: #f6f6f6;
 }
 .ncc-campaign-gallery-add-img input[type="file"]{
 	height: 100%;
@@ -1615,16 +1619,22 @@ span.status-published-title.color-red{
 }
 .ncc-campaign-gallery-list ul li{
 	display: inline-block;
-	vertical-align: baseline;
+	vertical-align: top;
 	padding: 0 20px 10px 0;
 	position: relative;
 }
 .ncc-campaign-gallery-list ul li .removeGallery {
     position: absolute;
-    top: 8px;
-    right: 6px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     opacity: 0;
     color: red;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    z-index: 3;
+    background: rgba(0,0,0,0.5);
 }
 .ncc-campaign-gallery-list ul li:hover .removeGallery{
 	opacity: 1;
@@ -1646,7 +1656,7 @@ span.status-published-title.color-red{
 
 .ncc-add-tag input[type="text"]{
 	width: 100%;
-	min-height: 50px;
+	min-height: 35px;
 	border-radius: 5px;
 	background: #fff;
 	border: none;
@@ -1654,7 +1664,9 @@ span.status-published-title.color-red{
 	color: #818181;
 	font-size: 13px;
 }
-
+.ncc-add-tag li.tagit-new input[type="text"]{
+	padding: 5px 5px!important;
+}
 .ncc-add-tag input[type="text"]::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   opacity: 1;
   color: #818181;
@@ -1685,7 +1697,19 @@ span.status-published-title.color-red{
 	align-items: center;
 	justify-content: flex-end;
 }
-
+ul.tagit li.tagit-choice {
+    position: relative;
+    line-height: inherit;
+    height: 35px;
+    padding: 9px 10px!important;
+    margin: 6px 5px;
+}
+.ui-widget.ui-widget-content.ui-autocomplete li{
+	padding: 5px 5px!important;
+}
+.ui-widget.ui-widget-content.ui-autocomplete li:hover{
+	border: 0!important;
+}
 .ncc-submit-btns button,
 .ncc-submit-btns a{
 	width: 130px;
@@ -1738,6 +1762,7 @@ span.status-published-title.color-red{
 
 #ui-datepicker-div{
 	z-index: 50!important;
+	max-width: 235px;
 }
 
 .ui-icon, 
@@ -1829,6 +1854,55 @@ a.ui-datepicker-next:after {
 .ncc-campaign-gallery-add-img video {
     width: 100px;
     height: 100px;
+}
+.profile-img-step-1 .profile-img-edit {
+    background: rgba(233, 234, 239, 0.8);
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: -99;
+    box-shadow: none;
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+.profile-img-step-1.modeEdit .profile-img-edit{
+	z-index: 9;
+	opacity: 1;
+}
+.profile-img-step-1 .profile-img-edit:hover{
+	background: rgba(233, 234, 239, 1);
+}
+.profileFieldUpdate{
+	padding-top: 25px;
+}
+#featured_image {
+    position: absolute;
+    cursor: pointer;
+    z-index: 10;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+#featured-picture-priview img {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+}
+.isreadyUpload{
+    background: rgba(246, 246, 246, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;	
+    transition: all 0.3s ease;
+}
+#featured_image:hover + .isreadyUpload{
+	z-index: 9;
+	opacity: 1;
 }
 @media(max-width: 1499px){
 
